--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.587 2023/09/04 22:36:55 thfr Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.588 2023/09/05 10:29:16 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 4 2023 $
+.Dd $Mdocdate: September 5 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -1669,8 +1669,17 @@ If ${DISTFILES*} varies depending on
 or architecture, use
 .Ev SUPDISTFILES*
 to ensure distfiles mirroring and
-.Cm makesum
+.Cm makesum Ns 's
 proper operation.
+.Pp
+If no
+.Ev DISTFILES*
+is set and if
+.Ev MASTER_SITES
+is not null, then
+.Ev DISTFILES
+will be set to
+.Pa ${DISNAME}${EXTRACT_SUFX} .
 .It Ev DISTNAME
 Name used to identify the port.
 See
