drop very old history

--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.594 2023/09/05 12:53:43 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.595 2023/09/05 12:58:01 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -1051,9 +1051,7 @@ Automatically set as soon as
 .Ev CONFIGURE_STYLE
 is gnu or higher.
 .It Ev AUTOCONF_VERSION
-Starting with
-.Ox 3.3 ,
-several versions of autoconf may coexist peacefully.
+Several versions of autoconf may coexist peacefully.
 The main autoconf script is a shell wrapper in the
 .Pa devel/metaauto
 package, and similarly for automake.
