DIST_TUPLE's handling of HOMEPAGE is optional, of course

--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.598 2023/09/05 13:13:50 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.599 2023/09/05 13:15:31 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -1656,7 +1656,7 @@ entries can be added as needed
 The components are used to build
 .Ev MASTER_SITES.name
 .Ev DISTFILES.name
-and
+and (optionally)
 .Ev HOMEPAGE .
 .Pp
 At the end of
