--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.603 2023/09/05 16:20:30 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.604 2023/09/05 23:45:53 jsg Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -1739,7 +1739,7 @@ is set and if
 is not null, then
 .Ev DISTFILES
 will be set to
-.Pa ${DISNAME}${EXTRACT_SUFX} .
+.Pa ${DISTNAME}${EXTRACT_SUFX} .
 .It Ev DISTNAME
 Name used to identify the port.
 See
