--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.607 2023/09/06 12:08:31 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.608 2023/09/06 13:33:46 caspar Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -2456,7 +2456,7 @@ below.
 Especially read the part about
 .Ev ONLY_FOR_ARCHS
 when some of the packages only exist for some architectures.
-.It NO_ARCH
+.It Ev NO_ARCH
 Location for arch-independent packages.
 Defaults to
 .Sq no-arch .
